@@ -9,7 +9,7 @@ https://github.com/JanLishak/HeaterController
 
 note: add VM options to run JavaFX prjects
 Windows: --module-path "C:\Program Files\Java\javafx-sdk-12.0.2\lib" --add-modules javafx.controls,javafx.fxml
-Linux: 
+Linux: --module-path /opt/javafx-sdk-12.0.2/lib --add-modules javafx.controls,javafx.fxml
 
 
 
